Fix heading spacing on dashboard with 0 templates

--- a/app/assets/stylesheets/views/dashboard.scss
+++ b/app/assets/stylesheets/views/dashboard.scss
@@ -12,7 +12,7 @@
     }
   }
 
-  > .heading-medium {
+  > .heading-medium:first-of-type {
     margin-top: 10px;
   }
 
